# rs4ts.dev

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  astro.config.mjs  ec.config.mjs  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  wrangler.toml
.github/workflows/: ci.yml
examples/cli-tool-code/: Cargo.toml
examples/cli-tool-code/src/: cli.rs  commands.rs  main.rs  store.rs  task.rs
examples/full-stack-code/: .gitignore  Cargo.toml  build.sh
examples/full-stack-code/backend/: Cargo.toml
examples/full-stack-code/backend/src/: handlers.rs  main.rs  models.rs  router.rs  state.rs
examples/full-stack-code/frontend/: Cargo.toml
examples/full-stack-code/frontend/src/: api.rs  dom.rs  lib.rs  models.rs
examples/full-stack-code/static/: index.html
examples/microservice-code/: Cargo.toml
examples/microservice-code/src/: config.rs  error.rs  lib.rs  main.rs  models.rs  shutdown.rs  state.rs  store.rs  telemetry.rs
examples/microservice-code/src/routes/: health.rs  links.rs  mod.rs
examples/microservice-code/tests/: api.rs
examples/rest-api-code/: Cargo.toml
examples/rest-api-code/src/: error.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs  store.rs
examples/rest-api-code/tests/: api.rs
examples/wasm-app-code/: Cargo.toml
examples/wasm-app-code/src/: cell.rs  lib.rs  render.rs  universe.rs  utils.rs
examples/wasm-app-code/tests/: web.rs
examples/wasm-app-code/www/: index.html
examples/websocket-chat-code/: Cargo.toml
examples/websocket-chat-code/src/: main.rs  message.rs  state.rs  ws.rs
examples/websocket-chat-code/static/: index.html
public/: _headers  robots.txt
scripts/: check-rust-snippets.mjs  check-security-snippets.mjs  content.test.mjs  fetch-contributors.mjs  indexnow.mjs
src/: content.config.ts  routeData.ts
src/components/: ChapterNav.astro  CodeLabel.astro  Footer.astro  Head.astro  Header.astro  LandingEffects.astro  PageFrame.astro  PageTitle.astro  Pagination.astro  Sidebar.astro  SocialIcons.astro  ThemeProvider.astro  TocCodeEnhancer.astro  TwoColumnContent.astro
src/content/docs/: index.mdx
src/content/docs/00-introduction/: 00-target-audience.md  01-how-to-read.md  02-prerequisites.md  03-cheatsheet.md  04-faq.md  05-version-policy.md  index.md
src/content/docs/01-getting-started/: 00-why-rust.md  01-installation.md  02-hello-world.md  03-cargo-basics.md  04-playground.md  index.md
src/content/docs/02-basics/: 00-variables.md  01-types.md  02-operators.md  03-comments.md  04-output.md  index.md
src/content/docs/03-functions/: 00-basic-functions.md  01-parameters.md  02-return-values.md  03-arrow-vs-closures.md  04-higher-order.md  05-function-pointers.md  06-recursion.md  index.md
src/content/docs/04-control-flow/: 00-conditionals.md  01-loops.md  02-match.md  03-if-let-while-let.md  04-break-continue.md  05-labeled-loops.md  index.md
src/content/docs/05-ownership/: 00-stack-heap.md  01-ownership-rules.md  02-borrowing.md  03-mutable-references.md  04-lifetimes.md  05-lifetime-elision.md  06-move-copy-clone.md  07-reference-counting.md  08-drop-trait.md  index.md
src/content/docs/06-data-structures/: 00-structs.md  01-tuple-structs.md  02-enums.md  03-option-enum.md  04-pattern-matching.md  05-impl-blocks.md  06-associated-functions.md  07-associated-types.md  08-field-init-shorthand.md  index.md
src/content/docs/07-collections/: 00-vectors.md  01-strings.md  02-string-manipulation.md  03-hashmaps.md  04-hashsets.md  05-btreemap-btreeset.md  06-iterators.md  07-iterator-consumers.md  08-custom-iterators.md  09-collection-performance.md  index.md
src/content/docs/08-error-handling/: 00-result-option.md  01-question-mark.md  02-panic.md  03-unwrap-expect.md  04-custom-errors.md  05-error-trait.md  06-anyhow-thiserror.md  07-multiple-errors.md  08-best-practices.md  index.md
src/content/docs/09-generics-traits/: 00-generic-functions.md  01-generic-structs.md  02-generic-enums.md  03-traits.md  04-trait-methods.md  05-trait-bounds.md  06-trait-objects.md  07-impl-trait.md  08-default-impls.md  09-supertraits.md  10-operator-overloading.md  11-marker-traits.md  12-orphan-rule.md  index.md
src/content/docs/10-smart-pointers/: 00-box.md  01-rc-arc.md  02-refcell-mutex.md  03-cell.md  04-cow.md  05-weak.md  06-deref-trait.md  07-comparison.md  index.md
src/content/docs/11-async/: 00-promises-vs-futures.md  01-async-await.md  02-tokio-intro.md  03-tokio-setup.md  04-async-functions.md  05-async-trait.md  06-streams.md  07-select-join.md  08-channels.md  09-spawning-tasks.md  10-concurrency.md  11-sync-primitives.md  12-arc-mutex-pattern.md  13-async-vs-sync.md  index.md
src/content/docs/12-modules-packages/: 00-modules.md  01-module-tree.md  02-use-keyword.md  03-pub-visibility.md  04-cargo.md  05-cargo-commands.md  06-dependencies.md  07-dev-dependencies.md  08-workspaces.md  09-feature-flags.md  10-build-scripts.md  11-publishing.md  index.md
src/content/docs/13-testing/: 00-unit-tests.md  01-test-organization.md  02-assertions.md  03-should-panic.md  04-integration-tests.md  05-test-fixtures.md  06-mocking.md  07-property-testing.md  08-benchmarking.md  09-doc-tests.md  10-coverage.md  11-tdd-workflow.md  (+1 more)
src/data/: contributors.json
src/lib/: contributors.mjs  ec-rust-playground.mjs  git-dates.mjs  inline-code.ts  seo-title.ts  site-meta.ts
src/pages/: [...slug].md.ts  index.md.ts
src/pages/og/: [...slug].ts
src/styles/: custom.css
worker/: index.js  index.test.js
(+195 files in other folders)
